<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_rewrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/delete"
        android:textColor="#4447FF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/region"
        app:layout_constraintBottom_toTopOf="@+id/textViewAt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTel" />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/number"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_rewrite" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textViewAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumber" />

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/textViewTel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/tel"
        app:layout_constraintBottom_toTopOf="@+id/textViewRegion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdd" />

    <TextView
        android:id="@+id/textViewAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="@string/at"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegion" />

    <EditText
        android:id="@+id/editText_numberView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hintNumber"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editText_nameView"
        app:layout_constraintEnd_toEndOf="@+id/editText_nameView"
        app:layout_constraintTop_toBottomOf="@+id/header_rewrite" />

    <EditText
        android:id="@+id/editText_nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText_addView"
        app:layout_constraintEnd_toEndOf="@+id/editText_addView"
        app:layout_constraintTop_toBottomOf="@+id/editText_numberView" />

    <EditText
        android:id="@+id/editText_addView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/editText_telView"
        app:layout_constraintEnd_toEndOf="@+id/editText_telView"
        app:layout_constraintTop_toBottomOf="@+id/editText_nameView" />

    <EditText
        android:id="@+id/editText_telView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/editText_regionView"
        app:layout_constraintEnd_toEndOf="@+id/editText_regionView"
        app:layout_constraintTop_toBottomOf="@+id/editText_addView" />

    <EditText
        android:id="@+id/editText_regionView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editText_atView"
        app:layout_constraintEnd_toEndOf="@+id/editText_atView"
        app:layout_constraintTop_toBottomOf="@+id/editText_telView" />

    <EditText
        android:id="@+id/editText_atView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center"
        android:inputType="datetime"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewAt"
        app:layout_constraintTop_toBottomOf="@+id/editText_regionView" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="331dp"
        android:layout_height="59dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/return_button" />

        <Button
            android:id="@+id/werite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="view"
            android:text="@string/delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>